Fix spacing when thick border

--- a/assets/quick-add.css
+++ b/assets/quick-add.css
@@ -177,5 +177,6 @@ quick-add-modal .product__view-details {
 }
 
 .quick-add__submit {
-  padding: 0 2rem;
+  padding: 0 1rem;
+  min-width: 100%;
 }
